--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        otp: ["20.3", "21.3", "22.2"]
+        otp: ["21.3", "22.2"]
         elixir: ["1.8", "1.9", "1.10"]
     steps:
       - uses: actions/checkout@v2
